# practice

./: README.md  pyproject.toml
src/csv_transformation/: transformation.py
src/exam/: main.py
src/oops/: oops.py
tests/csv_transformation/: test_survey.py
tests/exam/: test_main.py
tests/oops/: test_oops.py
tests/survey_trans/: survey_test.py
